--- a/data/projects.yml
+++ b/data/projects.yml
@@ -20,5 +20,5 @@
 
 - name: My first react app
   description: Search some gifs from giphy
-  image: [projects/placeholder.png, projects/placeholder2.png, projects/placeholder.png]
+  image: [projects/giphy1.png, projects/giphy2.png, projects/giphy3.png]
   url: https://tyhyun309.github.io/workshop/
