--- a/data/projects.yml
+++ b/data/projects.yml
@@ -1,5 +1,5 @@
 - name: Smart Vacay (2023)
-  description: Final project for Batch 1190 Web Development course. This Web App allows user to create an itinerary for their trip with a single click of a button.
+  description: Final group project for Batch 1190 Web Development course. This Web App allows user to create an itinerary for their trip with a single click of a button.
   image: [projects/smart1.png, projects/smart2.png, projects/smart3.png, projects/smart4.png, projects/smart5.png]
   url: https://www.smartvacay.app
 
@@ -8,17 +8,17 @@
   image: [projects/movielist1.png, projects/movielist2.png, projects/movielist3.png]
   url: https://srr-watchlist.herokuapp.com/
 
-- name: Longest Word Game (2023)
-  description: Decent description of the app
-  image: [projects/placeholder.png, projects/placeholder2.png, projects/placeholder.png]
-  url: https://www.google.com
-
-- name: Death Dealers (2023)
-  description: A marketplace app inspired by the Airbnb model with a fun-twist (totally fictional)
-  image: [projects/placeholder.png, projects/placeholder2.png, projects/placeholder.png]
-  url: https://www.google.com
-
 - name: My first react app (2023)
-  description: Search some gifs from giphy
+  description: Solo project. Searching gifs using giphy API. First time playing with ReactJS.
   image: [projects/giphy1.png, projects/giphy2.png, projects/giphy3.png]
   url: https://tyhyun309.github.io/workshop/
+
+- name: Death Dealers (2023)
+  description: Group project. A marketplace app inspired by the Airbnb model with a fun-twist (totally fictional).
+  image: [projects/placeholder.png, projects/placeholder2.png, projects/placeholder.png]
+  url: https://hire-assassin.herokuapp.com/
+
+- name: Longest Word Game (2023)
+  description: Decent description of the app.
+  image: [projects/placeholder.png, projects/placeholder2.png, projects/placeholder.png]
+  url: https://www.google.com
