--- a/data/projects.yml
+++ b/data/projects.yml
@@ -18,7 +18,7 @@
   image: [projects/placeholder.png, projects/placeholder2.png, projects/placeholder.png]
   url: https://hire-assassin.herokuapp.com/
 
-- name: Longest Word Game (2023)
-  description: Decent description of the app.
+- name: Longest Word Game (2023) (Update soon)
+  description: 👷🏻 Under construction... 🛠️
   image: [projects/placeholder.png, projects/placeholder2.png, projects/placeholder.png]
-  url: https://www.google.com
+  url: https://tyhyun.me
