--- a/data/projects.yml
+++ b/data/projects.yml
@@ -4,7 +4,7 @@
   url: https://www.smartvacay.app
 
 - name: Movie Watchlist (2023)
-  description: A Movie watch list created by Ruby on Rails. You can create your own movie list too.
+  description: A Movie watch list built with Ruby on Rails. You can create your own movie list too.
   image: [projects/movielist1.png, projects/movielist2.png, projects/movielist3.png]
   url: https://srr-watchlist.herokuapp.com/
 
@@ -14,8 +14,8 @@
   url: https://tyhyun309.github.io/workshop/
 
 - name: Death Dealers (2023)
-  description: Group project. A marketplace app inspired by the Airbnb model with a fun-twist (totally fictional).
-  image: [projects/placeholder.png, projects/placeholder2.png, projects/placeholder.png]
+  description: "Group project with Batch 1190 Web Development. A marketplace app inspired by the Airbnb model with a fun-twist (totally fictional). You can hire an assassin or you can register yourself as an assassin.\n\nREMINDER: IT'S ALL FAKE AND FICTIONAL!!!"
+  image: [projects/hire1.png, projects/hire2.png, projects/hire3.png]
   url: https://hire-assassin.herokuapp.com/
 
 - name: Longest Word Game (2023) (Update soon)
