--- a/data/projects.yml
+++ b/data/projects.yml
@@ -1,26 +1,37 @@
 - name: Smart Vacay (2023)
+  tech: <i class="devicon-rails-plain-wordmark colored h3"></i>
   description: Final group project for Batch 1190 Web Development course. This Web App allows user to create an itinerary for their trip with a single click of a button.
   image: [projects/smart1.png, projects/smart2.png, projects/smart3.png, projects/smart4.png, projects/smart5.png]
   url: https://www.smartvacay.app
 
 - name: Movie Watchlist (2023)
+  tech: <i class="devicon-rails-plain-wordmark colored h3"></i>
   description: A Movie watch list built with Ruby on Rails. You can create your own movie list too.
   image: [projects/movielist1.png, projects/movielist2.png, projects/movielist3.png]
   url: https://srr-watchlist.herokuapp.com/
 
 - name: My first react app (Giphy) (2023)
+  tech: <i class="devicon-react-original-wordmark colored h3"></i>
   description: Solo project. Searching gifs using giphy API. First time playing with ReactJS.
   image: [projects/giphy1.png, projects/giphy2.png, projects/giphy3.png]
   url: https://tyhyun309.github.io/workshop/
 
 - name: Death Dealers (2023)
+  tech: <i class="devicon-rails-plain-wordmark colored h3"></i>
   description: "Group project with Batch 1190 Web Development. A marketplace app inspired by the Airbnb model with a fun-twist (totally fictional). You can hire an assassin or you can register yourself as an assassin.\n\nREMINDER: IT'S ALL FAKE AND FICTIONAL!!!"
   image: [projects/hire1.png, projects/hire2.png, projects/hire3.png]
   url: https://hire-assassin.herokuapp.com/
 
-- name: Simple Budget Tracker (2023) (👷🏻 Keep updating... 🛠️)
-  description: A simple budget tracker built with ReactJS
+- name: Simple Budget Tracker (Ruby on Rails) (2023)
+  tech: <i class="devicon-rails-plain-wordmark colored h3"></i>
+  description: Solo project. A budget tracker built with Ruby on Rails. (will be online soon)
   image: [projects/placeholder.png, projects/placeholder2.png, projects/placeholder.png]
+  url: https://tyhyun.me
+
+- name: Simple Budget Tracker (React) (2023) (👷🏻 Realll simple...)
+  tech: <i class="devicon-react-original-wordmark colored h3"></i>
+  description: Solo project. A simple budget tracker built with ReactJS
+  image: [projects/react-budget-1.png, projects/react-budget-2.png]
   url: https://tyhyun309.github.io/budget-tracker/
 
 - name: Longest Word Game (2023) (Update soon)
