--- a/data/projects.yml
+++ b/data/projects.yml
@@ -26,7 +26,7 @@
   tech: <i class="devicon-rails-plain-wordmark colored h3"></i>
   description: Solo project. A budget tracker built with Ruby on Rails. (will be online soon)
   image: [projects/rails-budget-1.png, projects/rails-budget-2.png, projects/rails-budget-3.png, projects/rails-budget-4.png]
-  url: #
+  url: https://github.com/tyhyun309/rails-budget-tracker
 
 - name: Simple Budget Tracker (React) (2023) (👷🏻 Really basic one...)
   tech: <i class="devicon-react-original-wordmark colored h3"></i>
