added weather proj

--- a/data/projects.yml
+++ b/data/projects.yml
@@ -28,7 +28,13 @@
   image: [projects/rails-budget-1.png, projects/rails-budget-2.png, projects/rails-budget-3.png, projects/rails-budget-4.png]
   url: https://github.com/tyhyun309/rails-budget-tracker
 
-- name: Simple Budget Tracker (React) (2023) (👷🏻 Really basic one...)
+- name: Simple Weather App
+  tech: <i class="devicon-javascript-plain colored h3"></i>
+  description: Solo project. An app for checking current weather, built with Javascript
+  image: [projects/weather-1.png, projects/weather-2.png, projects/weather-3.png, projects/weather-4.png]
+  url: https://tyhyun-weather-app-2e2bee251a5f.herokuapp.com/
+
+- name: Simple Budget Tracker (React) (2023) (Really basic one...)
   tech: <i class="devicon-react-original-wordmark colored h3"></i>
   description: Solo project. A simple budget tracker built with ReactJS
   image: [projects/react-budget-1.png, projects/react-budget-2.png]
